<resources>
    <string name="app_name">Practica5</string>
    <string name="welcomeText">Welcome to Los Portales!</string>
    <string name="welcomeDescription">Taquería Los Portales is a quick, casual restaurant.</string>
    <string name="buttonStart">Get Started!</string>

    <string name="name">Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept the terms and conditions of Los Portales</string>
    <string name="signIn">SIGN IN</string>

    <string name="ourMenu">OUR MENU</string>
    <string name="antojitos">Antojitos</string>
    <string name="especialidades">Especialidades</string>
    <string name="combinations">Combinations</string>
    <string name="tortas">Tortas</string>
    <string name="sopas">Sopas</string>
    <string name="drinks">Drinks</string>
</resources>